vzense-sys/vzense/include/Vzense_api_560.h

/**
* @brief 		Initializes the API on the device. This function must be invoked before any other Vzense APIs.
* @return		::PsRetOK if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_Initialize();
/**
* @brief 		Shuts down the API on the device and clears all resources allocated by the API. After invoking this function, no other Vzense APIs can be invoked.
* @return		::PsRetOK	if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_Shutdown();
/**
* @brief 		Returns the number of camera devices currently connected.
* @param[out]	pDeviceCount	Pointer to a 32-bit integer variable in which to return the device count.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_GetDeviceCount(uint32_t* pDeviceCount);
/**
* @brief 		Returns the info lists of the deviceCount camera devices.
* @param[in] 	deviceCount		the number of camera devices.
* @param[out]	pDevicesList	Pointer to a buffer in which to store the deviceCount devices infos.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_GetDeviceListInfo(PsDeviceInfo* pDevicesList, uint32_t deviceCount);
/**
* @brief 		Returns the info of the deviceIndex camera device.
* @param[in] 	deviceIndex	The index of the device to open. Device indices range from 0 to device count - 1.
* @param[out]	pDevices	Pointer to a buffer in which to store the device info.
* @return 		::PsRetOK	if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_GetDeviceInfo(PsDeviceInfo* pDevices, uint32_t deviceIndex);
/**
* @brief 		Opens the device specified by <code>uri</code>. The device must be subsequently closed using PsCloseDevice().
* @param[in] 	uri			the uri of the device. See ::PsDeviceInfo for more information.
* @param[out]	pDevices	the handle of the device on which to open.
* @return: 		::PsRetOK	if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_OpenDevice(const char* uri, PsDeviceHandle* pDevice);
/**
* @brief 		Closes the device specified by <code>device</code> that was opened using PsOpenDevice.
* @param[in] 	device		The handle of the device to close.
* @return: 		::PsRetOK	if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_CloseDevice(PsDeviceHandle* device);