vzense-sys/bindings/dcam560.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of PsDeviceInfo"][::std::mem::size_of::<PsDeviceInfo>() - 398usize];
    ["Alignment of PsDeviceInfo"][::std::mem::align_of::<PsDeviceInfo>() - 1usize];
    ["Offset of field: PsDeviceInfo::SessionCount"]
        [::std::mem::offset_of!(PsDeviceInfo, SessionCount) - 0usize];
    ["Offset of field: PsDeviceInfo::devicetype"]
        [::std::mem::offset_of!(PsDeviceInfo, devicetype) - 4usize];
    ["Offset of field: PsDeviceInfo::uri"][::std::mem::offset_of!(PsDeviceInfo, uri) - 8usize];
    ["Offset of field: PsDeviceInfo::fw"][::std::mem::offset_of!(PsDeviceInfo, fw) - 264usize];
    ["Offset of field: PsDeviceInfo::alias"]
        [::std::mem::offset_of!(PsDeviceInfo, alias) - 314usize];
    ["Offset of field: PsDeviceInfo::status"]
        [::std::mem::offset_of!(PsDeviceInfo, status) - 378usize];
    ["Offset of field: PsDeviceInfo::ip"][::std::mem::offset_of!(PsDeviceInfo, ip) - 382usize];
};
impl Default for PsDeviceInfo {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct PsDataModeList {
    pub count: u8,
    pub datamodelist: [u8; 32usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of PsDataModeList"][::std::mem::size_of::<PsDataModeList>() - 33usize];
    ["Alignment of PsDataModeList"][::std::mem::align_of::<PsDataModeList>() - 1usize];
    ["Offset of field: PsDataModeList::count"]
        [::std::mem::offset_of!(PsDataModeList, count) - 0usize];
    ["Offset of field: PsDataModeList::datamodelist"]
        [::std::mem::offset_of!(PsDataModeList, datamodelist) - 1usize];
};
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct PsDepthRangeList {
    pub count: u8,
    pub depthrangelist: [u8; 9usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of PsDepthRangeList"][::std::mem::size_of::<PsDepthRangeList>() - 10usize];
    ["Alignment of PsDepthRangeList"][::std::mem::align_of::<PsDepthRangeList>() - 1usize];
    ["Offset of field: PsDepthRangeList::count"]
        [::std::mem::offset_of!(PsDepthRangeList, count) - 0usize];
    ["Offset of field: PsDepthRangeList::depthrangelist"]
        [::std::mem::offset_of!(PsDepthRangeList, depthrangelist) - 1usize];
};
#[repr(C, packed)]
#[derive(Debug, Default, Copy, Clone)]
pub struct PsMeasuringRange {
    pub depthMode: u8,
    pub depthMaxNear: u16,
    pub depthMaxMid: u16,
    pub depthMaxFar: u16,
    pub effectDepthMaxNear: u16,
    pub effectDepthMaxMid: u16,
    pub effectDepthMaxFar: u16,
    pub effectDepthMinNear: u16,
    pub effectDepthMinMid: u16,
    pub effectDepthMinFar: u16,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of PsMeasuringRange"][::std::mem::size_of::<PsMeasuringRange>() - 19usize];
    ["Alignment of PsMeasuringRange"][::std::mem::align_of::<PsMeasuringRange>() - 1usize];
    ["Offset of field: PsMeasuringRange::depthMode"]
        [::std::mem::offset_of!(PsMeasuringRange, depthMode) - 0usize];
    ["Offset of field: PsMeasuringRange::depthMaxNear"]
        [::std::mem::offset_of!(PsMeasuringRange, depthMaxNear) - 1usize];
    ["Offset of field: PsMeasuringRange::depthMaxMid"]
        [::std::mem::offset_of!(PsMeasuringRange, depthMaxMid) - 3usize];
    ["Offset of field: PsMeasuringRange::depthMaxFar"]
        [::std::mem::offset_of!(PsMeasuringRange, depthMaxFar) - 5usize];
    ["Offset of field: PsMeasuringRange::effectDepthMaxNear"]
        [::std::mem::offset_of!(PsMeasuringRange, effectDepthMaxNear) - 7usize];
    ["Offset of field: PsMeasuringRange::effectDepthMaxMid"]
        [::std::mem::offset_of!(PsMeasuringRange, effectDepthMaxMid) - 9usize];
    ["Offset of field: PsMeasuringRange::effectDepthMaxFar"]
        [::std::mem::offset_of!(PsMeasuringRange, effectDepthMaxFar) - 11usize];
    ["Offset of field: PsMeasuringRange::effectDepthMinNear"]
        [::std::mem::offset_of!(PsMeasuringRange, effectDepthMinNear) - 13usize];
    ["Offset of field: PsMeasuringRange::effectDepthMinMid"]
        [::std::mem::offset_of!(PsMeasuringRange, effectDepthMinMid) - 15usize];
    ["Offset of field: PsMeasuringRange::effectDepthMinFar"]
        [::std::mem::offset_of!(PsMeasuringRange, effectDepthMinFar) - 17usize];
};
#[repr(C, packed)]
#[derive(Debug, Default, Copy, Clone)]
pub struct PsTalDelay {
    pub range: u8,
    pub value0: u16,
    pub value1: u16,
    pub value2: u16,
    pub value3: u16,
    pub value4: u16,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of PsTalDelay"][::std::mem::size_of::<PsTalDelay>() - 11usize];
    ["Alignment of PsTalDelay"][::std::mem::align_of::<PsTalDelay>() - 1usize];
    ["Offset of field: PsTalDelay::range"][::std::mem::offset_of!(PsTalDelay, range) - 0usize];
    ["Offset of field: PsTalDelay::value0"][::std::mem::offset_of!(PsTalDelay, value0) - 1usize];
    ["Offset of field: PsTalDelay::value1"][::std::mem::offset_of!(PsTalDelay, value1) - 3usize];
    ["Offset of field: PsTalDelay::value2"][::std::mem::offset_of!(PsTalDelay, value2) - 5usize];
    ["Offset of field: PsTalDelay::value3"][::std::mem::offset_of!(PsTalDelay, value3) - 7usize];
    ["Offset of field: PsTalDelay::value4"][::std::mem::offset_of!(PsTalDelay, value4) - 9usize];
};
#[doc = " @brief WDR (Wide Dynamic Range) output mode settings (e.g. Near/Far range fusion)."]
#[repr(C, packed)]
#[derive(Debug, Default, Copy, Clone)]
pub struct PsWDRPulseCount {
    #[doc = "!< The pulseCount of the first range."]
    pub pulseCount1: u16,
    #[doc = "!< The pulseCount of the second range."]
    pub pulseCount2: u16,
    #[doc = "!< The pulseCount of the third range."]
    pub pulseCount3: u16,
    pub option: u8,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of PsWDRPulseCount"][::std::mem::size_of::<PsWDRPulseCount>() - 7usize];
    ["Alignment of PsWDRPulseCount"][::std::mem::align_of::<PsWDRPulseCount>() - 1usize];
    ["Offset of field: PsWDRPulseCount::pulseCount1"]
        [::std::mem::offset_of!(PsWDRPulseCount, pulseCount1) - 0usize];
    ["Offset of field: PsWDRPulseCount::pulseCount2"]
        [::std::mem::offset_of!(PsWDRPulseCount, pulseCount2) - 2usize];
    ["Offset of field: PsWDRPulseCount::pulseCount3"]
        [::std::mem::offset_of!(PsWDRPulseCount, pulseCount3) - 4usize];
    ["Offset of field: PsWDRPulseCount::option"]
        [::std::mem::offset_of!(PsWDRPulseCount, option) - 6usize];
};
#[doc = " @brief WDR (Wide Dynamic Range) output mode settings (e.g. Near/Far range fusion)."]
#[repr(C, packed)]
#[derive(Debug, Default, Copy, Clone)]
pub struct PsWDRConfidenceThreshold {
    #[doc = "!< The confidence threshold of the first range."]
    pub threshold1: u16,
    #[doc = "!< The confidence threshold of the second range."]
    pub threshold2: u16,
    #[doc = "!< The confidence threshold of the third range."]
    pub threshold3: u16,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of PsWDRConfidenceThreshold"]
        [::std::mem::size_of::<PsWDRConfidenceThreshold>() - 6usize];
    ["Alignment of PsWDRConfidenceThreshold"]
        [::std::mem::align_of::<PsWDRConfidenceThreshold>() - 1usize];
    ["Offset of field: PsWDRConfidenceThreshold::threshold1"]
        [::std::mem::offset_of!(PsWDRConfidenceThreshold, threshold1) - 0usize];
    ["Offset of field: PsWDRConfidenceThreshold::threshold2"]
        [::std::mem::offset_of!(PsWDRConfidenceThreshold, threshold2) - 2usize];
    ["Offset of field: PsWDRConfidenceThreshold::threshold3"]
        [::std::mem::offset_of!(PsWDRConfidenceThreshold, threshold3) - 4usize];
};
#[doc = " @brief hotplug status callback function\n pInfo  return the info of the Device, See ::PsDeviceInfo\n state  0:device added , 1:device removed"]
pub type PtrHotPlugStatusCallback = ::std::option::Option<
    unsafe extern "C" fn(pInfo: *const PsDeviceInfo, state: ::std::os::raw::c_int),
>;
#[doc = " @brief hotplug status callback function for c plus plus\n pInfo  return the info of the Device, See ::PsDeviceInfo\n state  0:device added , 1:device removed\n contex pointer to the object of C++ class"]
pub type PtrHotPlugStatusCallback_ = ::std::option::Option<
    unsafe extern "C" fn(
        pInfo: *const PsDeviceInfo,
        state: ::std::os::raw::c_int,
        contex: *mut ::std::os::raw::c_void,
    ),
>;
unsafe extern "C" {
    #[doc = " @brief \t\tInitializes the API on the device. This function must be invoked before any other Vzense APIs.\n @return\t\t::PsRetOK if the function succeeded, or one of the error values defined by ::PsReturnStatus."]
    pub fn Ps2_Initialize() -> PsReturnStatus;
}
unsafe extern "C" {
    #[doc = " @brief \t\tShuts down the API on the device and clears all resources allocated by the API. After invoking this function, no other Vzense APIs can be invoked.\n @return\t\t::PsRetOK\tif the function succeeded, or one of the error values defined by ::PsReturnStatus."]
    pub fn Ps2_Shutdown() -> PsReturnStatus;
}
unsafe extern "C" {
    #[doc = " @brief \t\tReturns the number of camera devices currently connected.\n @param[out]\tpDeviceCount\tPointer to a 32-bit integer variable in which to return the device count.\n @return \t\t::PsRetOK\t\tif the function succeeded, or one of the error values defined by ::PsReturnStatus."]
    pub fn Ps2_GetDeviceCount(pDeviceCount: *mut u32) -> PsReturnStatus;
}
unsafe extern "C" {
    #[doc = " @brief \t\tReturns the info lists of the deviceCount camera devices.\n @param[in] \tdeviceCount\t\tthe number of camera devices.\n @param[out]\tpDevicesList\tPointer to a buffer in which to store the deviceCount devices infos.\n @return \t\t::PsRetOK\t\tif the function succeeded, or one of the error values defined by ::PsReturnStatus."]
    pub fn Ps2_GetDeviceListInfo(
        pDevicesList: *mut PsDeviceInfo,
        deviceCount: u32,
    ) -> PsReturnStatus;
}
unsafe extern "C" {
    #[doc = " @brief \t\tReturns the info of the deviceIndex camera device.\n @param[in] \tdeviceIndex\tThe index of the device to open. Device indices range from 0 to device count - 1.\n @param[out]\tpDevices\tPointer to a buffer in which to store the device info.\n @return \t\t::PsRetOK\tif the function succeeded, or one of the error values defined by ::PsReturnStatus."]
    pub fn Ps2_GetDeviceInfo(pDevices: *mut PsDeviceInfo, deviceIndex: u32) -> PsReturnStatus;
}
unsafe extern "C" {
    #[doc = " @brief \t\tOpens the device specified by <code>uri</code>. The device must be subsequently closed using PsCloseDevice().\n @param[in] \turi\t\t\tthe uri of the device. See ::PsDeviceInfo for more information.\n @param[out]\tpDevices\tthe handle of the device on which to open.\n @return: \t\t::PsRetOK\tif the function succeeded, or one of the error values defined by ::PsReturnStatus."]
    pub fn Ps2_OpenDevice(
        uri: *const ::std::os::raw::c_char,
        pDevice: *mut PsDeviceHandle,
    ) -> PsReturnStatus;
}
unsafe extern "C" {
    #[doc = " @brief \t\tCloses the device specified by <code>device</code> that was opened using PsOpenDevice.\n @param[in] \tdevice\t\tThe handle of the device to close.\n @return: \t\t::PsRetOK\tif the function succeeded, or one of the error values defined by ::PsReturnStatus."]
    pub fn Ps2_CloseDevice(device: *mut PsDeviceHandle) -> PsReturnStatus;
}
